# deterministic_slm

./: Makefile  README.md  pyproject.toml
notebooks/: kaggle_colab_transformers_repro.ipynb
src/deterministic_slm/: __init__.py  backend.py  cli.py  hashing.py  probabilities.py  reporting.py  toy.py
tests/: test_backend.py  test_cli.py  test_hashing.py  test_probabilities.py  test_reporting.py  test_toy.py
